[package]
name = "async-uring"
version = "0.1.0"
edition = "2024"

[dependencies]
diatomic-waker = "0.2.3"
event-listener = "5.4.0"
futures = { version = "0.3.31", default-features = false, features = ["std", "async-await"] }
io-uring = "0.7.4"
libc = "0.2.171"
pin-project-lite = "0.2.16"
slab = "0.4.9"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["net"], optional = true }

[dev-dependencies]
tokio = { version = "1.44.1", features = ["rt", "rt-multi-thread", "macros", "net", "time"], default-features = false }

[features]
default = ["tokio"]
tokio = ["dep:tokio"]

[profile.release]
debug = true
lto = "fat"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_fields_in_debug = "allow"
must_use_candidate = "allow"
inline_always = "allow"
undocumented_unsafe_blocks = "warn"

[[example]]
name = "echo"
required-features = ["tokio"]

[[example]]
name = "tcp_load_test"
required-features = ["tokio"]
