[package]
name = "async-uring"
version = "0.1.0"
edition = "2024"

[dependencies]
diatomic-waker = "0.2.3"
event-listener = "5.4.0"
futures = { version = "0.3.31", default-features = false, features = ["std", "async-await"] }
io-uring = "0.7.4"
libc = "0.2.171"
pin-project-lite = "0.2.16"
slab = "0.4.9"
thiserror = "2.0.12"
tokio = "1.44.1"

[dev-dependencies]
bytes = "1.10.1"
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["server", "http1"] }
hyper-util = { version = "0.1.11", features = ["tokio"] }
tokio = { version = "1.44.1", features = ["rt", "rt-multi-thread", "macros", "net", "time", "io-util"], default-features = false }
tokio-util = { version = "0.7.14", features = ["compat"] }

[features]
default = ["tokio"]
tokio = ["tokio/net"]

[profile.release]
debug = true
lto = "fat"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_fields_in_debug = "allow"
must_use_candidate = "allow"
inline_always = "allow"
redundant_else = "allow"
undocumented_unsafe_blocks = "warn"

[[example]]
name = "echo"
required-features = ["tokio"]

[[example]]
name = "hyper"
required-features = ["tokio"]

[[example]]
name = "nop"
required-features = ["tokio"]

[[example]]
name = "tcp_load_test"
required-features = ["tokio"]
